added more information

--- a/tips.html
+++ b/tips.html
@@ -118,10 +118,37 @@
         </ul>
       </nav>
 
-    <!-- TODO: add actual information on garden setup-->
     <section id="garden-setup">
         <h2>💧 Garden Setup</h2>
-        <p>[this is filler text about setting up an outdoor garden]</p>
+        <dl>
+            <dt><strong>In-ground vs. raised bed:</strong></dt>
+            <dd>
+                Raised bed: Raised beds offer the main advantage of a longer growing season. 
+                Since the raised bed warms up the soil quicker in the spring, you can begin planting 
+                earlier. Raised beds also offer less soil compaction and therefore better drainage 
+                through the soil. Raised beds also typically have less necessary weeding and are considered 
+                lower maintenance than a traditional in-ground garden.
+            </dd>
+            <dd>
+                In-ground: Since you don’t need to physically build an in-ground garden, they are 
+                typically cheaper and quicker to get started. In-ground gardens also need to be watered 
+                less, as they do not dry out as quickly as a raised bed garden would. However, animals 
+                have easy access to your crops, so fencing might be necessary.
+            </dd>
+
+            <dt><strong>What you'll need:</strong></dt>
+            <dd>
+                Many raised garden bed kits are available in a multitude of sizes and materials. 
+                However, if you prefer to create your own, all you will need is some lumber with the 
+                correct size specifications for your bed, and some screws to hold it together. You 
+                will also need soil to add into your raised garden bed. It is important to do your 
+                research beforehand so that you know what type of soil your intended plants prefer.
+            </dd>
+
+            <dt><strong>Resources:</strong></dt>
+            <dd><a href="https://www.homedepot.com/c/ah/how-to-build-raised-garden-beds/9ba683603be9fa5395fab90b41bb0da" target="_blank">How to build your own raised garden bed</a></dd>
+            <dd><a href="https://extension.uga.edu/publications/detail.html?number=C1027-3&title=raised-beds-vs-in-ground-gardens" target="_blank">More information on raised vs in-ground gardens</a></dd>
+        </dl>
     </section>
 
     <section id="compost">
@@ -146,9 +173,8 @@
         </dl>
     </section>
 
-    <!-- TODO: add actual information on indoor gardening-->
     <section id="indoor-gardening">
-        <h2>Indoor Gardens</h2>
+        <h2>🪴Indoor Gardens</h2>
         <dl>
             <dt><strong>Benefits:</strong></dt>
             <dd>
@@ -157,12 +183,16 @@
                 There are many ways to get these benefits inside your home beyond your typical house plant.
             </dd>
 
-            <dt><strong>Hydroponics</strong></dt>
+            <dt><strong>Hydroponics:</strong></dt>
             <dd>
-
+                A great way to have a garden indoors (and maybe even cut down on some mess) is to use a hydroponic system. 
+                Hydroponics is a growing method that does not use soil and relies instead on nutrient-filled water to sustain 
+                the plants. The only plants that don’t do well in hydroponic systems are root crops (potatoes, onions, or beets)
+                 and tall or vining plants (trees or ivies). There are plenty of existing systems available for purchase, but 
+                 there are also resources that teach you how to make your own system.
             </dd>
 
-            <dt><strong>Windowsill Gardens</strong></dt>
+            <dt><strong>Windowsill Gardens:</strong></dt>
             <dd>
                 Like the name suggests, a windowsill garden can either hang from your window or simply sit in it. 
                 They are a great option for people who have limited space, don’t have time to commit to an outdoor 
@@ -171,9 +201,8 @@
             </dd>
 
             <dt><strong>Resources:</strong></dt>
-            <dd>
-                
-            </dd>
+            <dd><a href="https://www.nal.usda.gov/farms-and-agricultural-production-systems/hydroponics" target="_blank">More information on hydroponics!</a></dd>
+            <dd><a href="https://www.masterclass.com/articles/how-to-start-a-windowsill-garden" target="_blank">Learn about starting your own windowsill garden</a></dd>
         </dl>
     </section>
     <script src="/Scripts/loadNavbar.js"></script>
