fixed gardenology paragraph

--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
     <img class="sampleImage" src="Images/example1.jpg">
 
     <div class="content">
-      <h1 class="header">What is HackathonBGSU?</h1>
-      <h3 class="desc">Welcome to HackathonBGSU, your go-to resource for all things gardening! Whether you're a beginner or a seasoned grower, our site offers expert advice on a wide variety of crops and plants, sustainable gardening techniques, and best practices to help your garden thrive. Learn how to nurture your soil, plan efficient crop rotations, and grow healthy, productive plants season after season. Let us help you cultivate a garden that’s both beautiful and bountiful!</h2>
+      <h1 class="header">What is Gardenology?</h1>
+      <h3 class="desc">Welcome to Gardenology, your go-to resource for all things gardening! Whether you're a beginner or a seasoned grower, our site offers expert advice on a wide variety of crops and plants, sustainable gardening techniques, and best practices to help your garden thrive. Learn how to nurture your soil, plan efficient crop rotations, and grow healthy, productive plants season after season. Let us help you cultivate a garden that’s both beautiful and bountiful!</h2>
     </div>
   </div>
 
