added crop rotation information

--- a/tips.html
+++ b/tips.html
@@ -112,13 +112,38 @@
 
     <nav class="tipsNav">
         <ul>
+            <li><a href="#crop-rotation">Need to know what to plant and where?🌱</a></li>
             <li><a href="#garden-setup">Not sure how to get started? 🧤</a></li>
             <li><a href="#compost">Want composting tips? 🍂</a></li>
             <li><a href="#indoor-gardening">Don't have yard space? 🏠</a></li>
         </ul>
       </nav>
 
-    <section id="garden-setup">
+    <section id="crop-rotation">
+        <h2>🔄Crop Rotation</h2>
+        <dl>
+            <dt><strong>The "What" and the "Why":</strong></dt>
+            <dd>
+                Crop rotation is the practice of planting different crops in a sequence 
+                on the same plot of land. This is done to optimize the level of nutrients 
+                in the soil and keep both pests and weeds away from the crops.
+            </dd>
+
+            <dt><strong>In Practice:</strong></dt>
+            <dd>
+                For a small garden, some sources recommend dividing the garden into 
+                quarters, picking a central spot, and picking where to plant by “rotating” 
+                around that point. More details on which seeds to plant with others can be 
+                found in the Resources section below.
+            </dd>
+
+            <dt><strong>Resources:</strong></dt>
+            <dd><a href="https://rodaleinstitute.org/why-organic/organic-farming-practices/crop-rotations/" target="_blank">More information on crop rotations</a></dd>
+            <dd><a href="https://www.almanac.com/crop-rotation-chart-small-vegetable-garden" target="_blank">Small-scale crop rotation</a></dd>
+        </dl>
+    </section>
+    
+      <section id="garden-setup">
         <h2>💧 Garden Setup</h2>
         <dl>
             <dt><strong>In-ground vs. raised bed:</strong></dt>
