--- a/tips.html
+++ b/tips.html
@@ -87,6 +87,10 @@
             font-size: 20px;
         }
 
+        dl dd {
+            padding: 20px;
+        }
+
         a {
             color: #006400;
         }
