--- a/tips.html
+++ b/tips.html
@@ -99,12 +99,13 @@
             text-decoration: underline;
         }
 
-        .section-img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
+        .section-banner {
+            width: 100%;
+            height: 200px;
+            background-size: cover;
+            background-position: center;
             border-radius: 10px;
+            margin: 20px auto;
         }
 
     </style>
@@ -123,6 +124,7 @@
         </ul>
       </nav>
 
+    <div class="section-banner" style="background-image: url('/Images/Crop\ Rotation.jpg');"></div>
     <section id="crop-rotation">
         <h2>🔄Crop Rotation</h2>
         <dl>
@@ -147,7 +149,8 @@
         </dl>
     </section>
     
-      <section id="garden-setup">
+    <div class="section-banner" style="background-image: url('/Images/Raised\ Beds.jpg');"></div>
+    <section id="garden-setup">
         <h2>💧 Garden Setup</h2>
         <dl>
             <dt><strong>In-ground vs. raised bed:</strong></dt>
@@ -180,6 +183,7 @@
         </dl>
     </section>
 
+    <div class="section-banner" style="background-image: url('/Images/Composting.jpg');"></div>
     <section id="compost">
         <h2>♻️ Composting</h2>
         <dl>
@@ -202,6 +206,7 @@
         </dl>
     </section>
 
+    <div class="section-banner" style="background-image: url('/Images/Hydroponics.jpg');"></div>
     <section id="indoor-gardening">
         <h2>🪴Indoor Gardens</h2>
         <dl>
