added background image

--- a/Activities/quiz.html
+++ b/Activities/quiz.html
@@ -12,6 +12,10 @@
     <div id="navbar-container"></div>
 
     <style>
+        body {
+            background-image: url(/Images/floral-background.jpg);
+        }
+
         .container-container {
             display: flex;
             justify-content: center;
